// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCStorage .create() should handle existing 1`] = `
{
  "bytesWritten": 6,
  "contentType": "video/mp4",
  "createdAt": "2022-02-02T00:00:00.000Z",
  "id": "f7d13faa74e2475f-e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78",
  "metadata": {
    "custom": "",
    "lastModified": 1635398061454,
    "mimeType": "video/mp4",
    "name": "testfile.mp4",
    "sha1": "ZAPAntzKARqtb+j3B529GAOf3kI=",
    "size": 64,
  },
  "name": "userId/testfile.mp4",
  "originalName": "testfile.mp4",
  "size": 64,
  "uri": "http://api.com?upload_id=123456789",
  "userId": "userId",
}
`;

exports[`GCStorage .create() should request api and set status and uri 1`] = `
GCSFile {
  "bytesWritten": NaN,
  "contentType": "video/mp4",
  "createdAt": "2022-02-02T00:00:00.000Z",
  "expiredAt": "2022-02-02T01:00:00.000Z",
  "id": "f7d13faa74e2475f-e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78",
  "metadata": {
    "custom": "",
    "lastModified": 1635398061454,
    "mimeType": "video/mp4",
    "name": "testfile.mp4",
    "sha1": "ZAPAntzKARqtb+j3B529GAOf3kI=",
    "size": 64,
  },
  "name": "userId/testfile.mp4",
  "originalName": "testfile.mp4",
  "size": 64,
  "status": "created",
  "uri": "http://api.com?upload_id=123456789",
  "userId": "userId",
}
`;

exports[`GCStorage .create() should request api and set status and uri 2`] = `
[MockFunction] {
  "calls": [
    [
      {
        "url": "https://storage.googleapis.com/storage/v1/b/test-bucket",
      },
    ],
    [
      {
        "params": {
          "alt": "media",
        },
        "url": "https://storage.googleapis.com/storage/v1/b/test-bucket/o/f7d13faa74e2475f-e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78.META",
      },
    ],
    [
      {
        "body": "{"metadata":{"name":"testfile.mp4","size":64,"mimeType":"video/mp4","lastModified":1635398061454,"custom":"","sha1":"ZAPAntzKARqtb+j3B529GAOf3kI="}}",
        "headers": {
          "Content-Type": "application/json; charset=utf-8",
          "Origin": "http://api.com",
          "X-Upload-Content-Length": "64",
          "X-Upload-Content-Type": "video/mp4",
        },
        "method": "POST",
        "params": {
          "name": "userId/testfile.mp4",
          "size": 64,
          "uploadType": "resumable",
        },
        "url": "https://storage.googleapis.com/upload/storage/v1/b/test-bucket/o",
      },
    ],
    [
      {
        "body": "{"bytesWritten":null,"name":"userId/testfile.mp4","metadata":{"name":"testfile.mp4","size":64,"mimeType":"video/mp4","lastModified":1635398061454,"custom":"","sha1":"ZAPAntzKARqtb+j3B529GAOf3kI="},"originalName":"testfile.mp4","contentType":"video/mp4","size":64,"userId":"userId","id":"f7d13faa74e2475f-e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78","uri":"http://api.com?upload_id=123456789","createdAt":"2022-02-02T00:00:00.000Z","expiredAt":"2022-02-02T01:00:00.000Z"}",
        "headers": {
          "Content-Type": "application/json; charset=utf-8",
        },
        "method": "POST",
        "params": {
          "name": "f7d13faa74e2475f-e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78.META",
          "uploadType": "media",
        },
        "url": "https://storage.googleapis.com/upload/storage/v1/b/test-bucket/o",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`GCStorage .list() should return all user files 1`] = `
[
  {
    "createdAt": Date { NaN },
    "id": "f7d13faa74e2475f-e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78",
  },
]
`;

exports[`GCStorage .write() should request api and set status and bytesWritten 1`] = `
{
  "bytesWritten": 64,
  "contentType": "video/mp4",
  "createdAt": "2022-02-02T00:00:00.000Z",
  "id": "f7d13faa74e2475f-e8fed598250d10ea-7f59007b4b7cf67-120941ca7dc37b78",
  "metadata": {
    "custom": "",
    "lastModified": 1635398061454,
    "mimeType": "video/mp4",
    "name": "testfile.mp4",
    "sha1": "ZAPAntzKARqtb+j3B529GAOf3kI=",
    "size": 64,
  },
  "name": "userId/testfile.mp4",
  "originalName": "testfile.mp4",
  "size": 64,
  "status": "completed",
  "uri": "https://storage.googleapis.com/storage/v1/b/test-bucket/o/userId/testfile.mp4",
  "userId": "userId",
}
`;

exports[`GCStorage .write() should request api and set status and bytesWritten on resume 1`] = `
[MockFunction] {
  "calls": [
    [
      "http://api.com?upload_id=123456789",
      {
        "headers": {
          "Accept": "application/json",
          "Content-Range": "bytes */64",
        },
        "method": "PUT",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
